fixes and test alignment on the tricky top-images

--- a/stylesheets/poddocs.css
+++ b/stylesheets/poddocs.css
@@ -37,6 +37,7 @@ div.data_table {
 
 div.download {
     float: right;
+    margin-right: 10em;
 }
 
 h3 {
